# Parallel-Computing

./: CMakeLists.txt  LICENSE  build_and_run.bat  main.cpp  makefile
inc/: linear_layer.hpp  neural_network.hpp  numeric.hpp  pineapple.hpp  shape.hpp  shapeable.hpp  tensor.hpp  tensorlib.hpp  views.hpp
inc/tensor/: tensor.hpp
inc/types/: numeric.hpp
src/: linear_layer.tpp  neural_network.tpp  numeric.tpp  shape.tpp  shapeable.tpp  tensor.tpp  tensor_operators.tpp  tensorlib.tpp  views.tpp
src/loss/: binary_cross_entropy_loss.tpp  cross_entropy_loss.tpp  huber_loss.tpp  mae_loss.tpp  mse_loss.tpp
src/tensor/: tensor.tpp  tensor_linalg.tpp
